<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/common_panel_layout"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_40"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimens_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/suggest"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:textSize="@dimen/textsize_14"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/suggest_title"
            android:textSize="@dimen/textsize_14"
            android:background="@drawable/common_no_shape"
            android:layout_marginRight="@dimen/dimens_20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimens_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_20">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimens_10"
                android:layout_marginLeft="@dimen/dimens_20"
                android:text="@string/suggest_content" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginBottom="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_20"
            android:layout_marginTop="@dimen/dimens_10">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/suggest_content_put"
                android:textSize="@dimen/textsize_14"
                android:gravity="top|left"
                android:maxLength="200"
                android:maxLines="5"
                android:minLines="5"
                android:singleLine="false"
                android:background="@drawable/common_no_shape"/>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1"
            android:background="@color/view_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_40"
            android:background="@color/white"
            android:text="@string/suggest_submit"
            android:gravity="center"
            android:textColor="@color/common_tip_text"
            android:textSize="@dimen/textsize_18" />

    </LinearLayout>

</LinearLayout>
