<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimens_20">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_20"
            android:paddingBottom="@dimen/dimens_20">
            <com.example.teachingaffairs.ui.components.MyRoundImageView
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:background="@mipmap/aaa"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/about_us_name"
                android:layout_marginLeft="@dimen/dimens_1"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0.1"
            android:alpha="0.3"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:text="@string/signature"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginRight="@dimen/dimens_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0.1"
            android:alpha="0.3"
            android:background="@color/white"/>

        <!--个人信息-->
        <LinearLayout
            android:id="@+id/per_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/personal_information"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

        <!--修改密码-->
        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginBottom="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0.1"
            android:alpha="0.3"
            android:background="@color/white"/>

        <!--在线服务-->
        <LinearLayout
            android:id="@+id/online_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/online_service"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

        <!--信息反馈-->
        <LinearLayout
            android:id="@+id/message_feed_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/message_feed_back"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

        <!--关于我们-->
        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginBottom="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/aboutus"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0.1"
            android:alpha="0.3"
            android:background="@color/white"/>

        <!--退出登录-->
        <LinearLayout
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_10"
            android:paddingBottom="@dimen/dimens_10"
            android:layout_marginTop="@dimen/dimens_10"
            android:layout_marginRight="@dimen/dimens_10">

            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/logo"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:layout_marginLeft="@dimen/dimens_5"
                android:layout_weight="1.0"/>
            <ImageView
                android:layout_width="@dimen/dimens_20"
                android:layout_height="@dimen/dimens_20"
                android:src="@mipmap/mine_more_arrow"
                android:layout_gravity="end"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
