<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/index_panel_layout"/>

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/index_bg">
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"/>
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1"
                android:background="@color/view_bg"
                android:layout_gravity="bottom"/>
            <RadioGroup
                android:id="@+id/rb_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_50"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <RadioButton
                    android:id="@+id/rb_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_45"
                    style="@style/main_bottom_menu_style"
                    android:text="@string/rb_notice"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_checkbox_icon_menu_office"
                    android:paddingTop="@dimen/dimens_5"
                    android:paddingLeft="@dimen/dimens_2"
                    android:paddingRight="@dimen/dimens_2"
                    android:drawablePadding="@dimen/dimens_1"
                    android:checked="true"
                    android:textColor="@color/main_radiobutton_text_color"/>
                <RadioButton
                    android:id="@+id/rb_forum"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_45"
                    style="@style/main_bottom_menu_style"
                    android:text="@string/rb_forum"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_checkbox_icon_menu_office"
                    android:paddingTop="@dimen/dimens_5"
                    android:paddingLeft="@dimen/dimens_2"
                    android:paddingRight="@dimen/dimens_2"
                    android:drawablePadding="@dimen/dimens_1"
                    android:checked="false"
                    android:visibility="visible"
                    android:textColor="@color/main_radiobutton_text_color"/>
                <RadioButton
                    android:id="@+id/rb_application"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_45"
                    style="@style/main_bottom_menu_style"
                    android:text="@string/rb_application"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_checkbox_icon_menu_office"
                    android:paddingTop="@dimen/dimens_5"
                    android:paddingLeft="@dimen/dimens_2"
                    android:paddingRight="@dimen/dimens_2"
                    android:drawablePadding="@dimen/dimens_1"
                    android:checked="false"
                    android:visibility="visible"
                    android:textColor="@color/main_radiobutton_text_color"/>
                <!--<RadioButton-->
                    <!--android:id="@+id/rb_Professional"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="@dimen/dimens_45"-->
                    <!--style="@style/main_bottom_menu_style"-->
                    <!--android:text="@string/rb_Professional"-->
                    <!--android:layout_weight="1.0"-->
                    <!--android:drawableTop="@drawable/main_checkbox_icon_menu_office"-->
                    <!--android:paddingTop="@dimen/dimens_5"-->
                    <!--android:paddingLeft="@dimen/dimens_2"-->
                    <!--android:paddingRight="@dimen/dimens_2"-->
                    <!--android:drawablePadding="@dimen/dimens_1"-->
                    <!--android:checked="false"-->
                    <!--android:visibility="visible"-->
                    <!--android:textColor="@color/main_radiobutton_text_color"/>-->
                <RadioButton
                    android:id="@+id/rb_release"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_45"
                    style="@style/main_bottom_menu_style"
                    android:text="@string/rb_release"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_checkbox_icon_menu_office"
                    android:paddingTop="@dimen/dimens_5"
                    android:paddingLeft="@dimen/dimens_2"
                    android:paddingRight="@dimen/dimens_2"
                    android:drawablePadding="@dimen/dimens_1"
                    android:checked="false"
                    android:textColor="@color/main_radiobutton_text_color"/>
                <RadioButton
                    android:id="@+id/rb_address_books"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimens_45"
                    style="@style/main_bottom_menu_style"
                    android:text="@string/rb_address_books"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/main_checkbox_icon_menu_office"
                    android:paddingTop="@dimen/dimens_5"
                    android:paddingLeft="@dimen/dimens_2"
                    android:paddingRight="@dimen/dimens_2"
                    android:drawablePadding="@dimen/dimens_1"
                    android:checked="false"
                    android:textColor="@color/main_radiobutton_text_color"/>
            </RadioGroup>

        </LinearLayout>

    </TabHost>

</LinearLayout>
